--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -48,6 +48,9 @@ html {
     padding-left: 15px;
     padding-right: 15px;
     
+    @media (max-width: 1243px) {
+        max-width: 662px;
+    }
     &--fluid {
     max-width: unset;
     }
@@ -56,20 +59,7 @@ html {
     padding: 0;
     }
     
-    /* Tablet */
-    @media (max-width: 1199px) {
-    width: 900px;
-    }
     
-    /* Mobile */
-    @media (max-width: 899px) {
-    width: 600px;
-    }
-    
-    /* Mobile XS */
-    @media (max-width: 599px) {
-    width: 320px;
-    }
     }
     
     /* Utility */
@@ -115,3 +105,4 @@ html {
     -webkit-box-shadow: 0 0 0px 1000px rgb(255, 255, 255) inset;
     transition: background-color 5000s ease-in-out 0s;
     }
+    
