--- a/sass/sections/_adout-me.scss
+++ b/sass/sections/_adout-me.scss
@@ -17,4 +17,13 @@
     &>*{
         flex-shrink: 0;
     }
+
+    /* Tablet */
+    @media (max-width: 1243px) {
+        // flex-direction: column;
+        // column-gap: 0;
+        // align-items: center;
+        // row-gap: 64px;
+        
+}
 }
