--- a/css/main.css
+++ b/css/main.css
@@ -206,6 +206,12 @@ select:-webkit-autofill:focus {
 
 .wrapper-main-title {
   margin-bottom: 13px;
+  /* Tablet */
+}
+@media (max-width: 1243px) {
+  .wrapper-main-title {
+    margin-bottom: 9px;
+  }
 }
 
 .main-title {
@@ -568,6 +574,12 @@ select:-webkit-autofill:focus {
 .preview {
   padding-top: 73px;
   padding-bottom: 73px;
+  /* Tablet */
+}
+@media (max-width: 1243px) {
+  .preview {
+    padding-top: 128px;
+  }
 }
 
 .preview__content {
@@ -579,10 +591,25 @@ select:-webkit-autofill:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  /* Tablet */
 }
 .preview__content > * {
   -ms-flex-negative: 0;
       flex-shrink: 0;
+}
+@media (max-width: 1243px) {
+  .preview__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-column-gap: 0;
+            column-gap: 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    row-gap: 64px;
+  }
 }
 
 .about-me {
@@ -608,6 +635,7 @@ select:-webkit-autofill:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  /* Tablet */
 }
 .about-me__content > * {
   -ms-flex-negative: 0;
