--- a/sass/sections/_preview.scss
+++ b/sass/sections/_preview.scss
@@ -4,8 +4,12 @@
     /* Tablet */
     @media (max-width: 1243px) {
         padding-top: 128px;
+        padding-bottom: 128px;
+    
     }
+
 }
+
 .preview__content {
     display: flex;
     column-gap: 137px;
