feated: adaptive my works

--- a/sass/sections/_my-works.scss
+++ b/sass/sections/_my-works.scss
@@ -9,4 +9,11 @@
     display: flex;
     column-gap: 16px;
     justify-content: center;
+    
+    /* Tablet */
+    @media (max-width: 1243px) {
+        flex-direction: column;
+        row-gap: 16px;
+        align-items: center;
+    }
 }
