--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,4 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700;900&display=swap');
+
+@font-face {
+    font-family: 'Impact';
+    font-weight: 400;
+    font-style: normal;
+    src:url('./fonts/impact.ttf') format('ttf');
+}
+
 html {
     min-height: 100vh; /* sticky footer */
     scroll-behavior: smooth;
