--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -56,6 +56,7 @@ html {
     padding-left: 15px;
     padding-right: 15px;
     
+    /* Tablet */
     @media (max-width: 1243px) {
         max-width: 662px;
     }
@@ -67,6 +68,10 @@ html {
     padding: 0;
     }
     
+    /* Mobile */
+    @media (max-width: 662px) {
+        max-width: 443px;
+    }
     
     }
     
