--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,8 @@
 @import "./blocks/project-card";
 @import "./blocks/links";
 @import "./blocks/social-list";
+@import "./blocks/burger";
+@import "./blocks/mobile-menu";
 
 // sections
 @import "./sections/header";
