--- a/css/main.css
+++ b/css/main.css
@@ -220,10 +220,16 @@ select:-webkit-autofill:focus {
 .wrapper-main-title {
   margin-bottom: 13px;
   /* Tablet */
+  /* Mobile */
 }
 @media (max-width: 1243px) {
   .wrapper-main-title {
     margin-bottom: 9px;
+  }
+}
+@media (max-width: 662px) {
+  .wrapper-main-title {
+    margin-bottom: 16px;
   }
 }
 
@@ -232,16 +238,34 @@ select:-webkit-autofill:focus {
   font-size: 64px;
   line-height: 1.05;
   color: #0377FF;
+  /* Mobile */
+}
+@media (max-width: 662px) {
+  .main-title {
+    font-size: 40px;
+  }
 }
 
 .wrapper-main-subtitle {
   margin-bottom: 14px;
+  /* Mobile */
+}
+@media (max-width: 662px) {
+  .wrapper-main-subtitle {
+    margin-bottom: 16px;
+  }
 }
 
 .main-subtitle {
   font-weight: 700;
   font-size: 40px;
   line-height: 1.05;
+  /* Mobile */
+}
+@media (max-width: 662px) {
+  .main-subtitle {
+    font-size: 32px;
+  }
 }
 
 .context-title {
@@ -262,18 +286,37 @@ select:-webkit-autofill:focus {
 
 .author {
   width: 448px;
+  /* Mobile */
+}
+@media (max-width: 662px) {
+  .author {
+    width: 314px;
+  }
 }
 
 .author__description {
   font-weight: 400;
   font-size: 20px;
   line-height: 1.05;
+  /* Mobile */
+}
+@media (max-width: 662px) {
+  .author__description {
+    font-size: 24px;
+  }
 }
 
 .avatar {
   width: 629px;
   height: 575px;
   position: relative;
+  /* Mobile */
+}
+@media (max-width: 662px) {
+  .avatar {
+    width: 413px;
+    height: 430px;
+  }
 }
 
 .avatar__photo {
@@ -284,6 +327,13 @@ select:-webkit-autofill:focus {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  /* Mobile */
+}
+@media (max-width: 662px) {
+  .avatar__photo {
+    width: 278px;
+    height: 276px;
+  }
 }
 
 .avatar__item {
@@ -294,6 +344,13 @@ select:-webkit-autofill:focus {
   position: absolute;
   top: 0;
   left: 0;
+  /* Mobile */
+}
+@media (max-width: 662px) {
+  .avatar__item {
+    width: 278px;
+    height: 276px;
+  }
 }
 
 .avatar__item--img {
@@ -614,11 +671,18 @@ select:-webkit-autofill:focus {
   padding-top: 73px;
   padding-bottom: 73px;
   /* Tablet */
+  /* Mobile */
 }
 @media (max-width: 1243px) {
   .preview {
     padding-top: 128px;
     padding-bottom: 128px;
+  }
+}
+@media (max-width: 662px) {
+  .preview {
+    padding-top: 142px;
+    padding-bottom: 142px;
   }
 }
 
