--- a/sass/blocks/_avatar.scss
+++ b/sass/blocks/_avatar.scss
@@ -2,6 +2,12 @@
     width: 629px;
     height: 575px;
     position: relative;
+
+    /* Mobile */
+    @media (max-width: 662px) {
+        width: 413px;
+        height: 430px;
+    }
 }
 .avatar__background {
     
@@ -13,6 +19,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+
+    /* Mobile */
+    @media (max-width: 662px) {
+        width: 278px;
+        height: 276px;
+    }
 }
 .avatar__item {
     width: 374px;
@@ -22,6 +34,13 @@
     position: absolute;
     top: 0;
     left: 0;
+
+    /* Mobile */
+    @media (max-width: 662px) {
+        width: 278px;
+        height: 276px;
+        
+    }
 }
 .avatar__item--img {
     z-index: 3;
