--- a/css/main.css
+++ b/css/main.css
@@ -726,11 +726,19 @@ select:-webkit-autofill:focus {
   width: 904px;
   line-height: 1.05;
   /* Tablet */
+  /* Mobile */
 }
 @media (max-width: 1243px) {
   .about-me__description {
     font-weight: 500;
     width: 451px;
+    font-size: 22px;
+    line-height: 1.2;
+  }
+}
+@media (max-width: 662px) {
+  .about-me__description {
+    width: 322px;
     font-size: 22px;
     line-height: 1.2;
   }
@@ -748,11 +756,23 @@ select:-webkit-autofill:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  /* Tablet */
+  /* Mobile */
 }
 .about-me__content > * {
   -ms-flex-negative: 0;
       flex-shrink: 0;
+}
+@media (max-width: 662px) {
+  .about-me__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    row-gap: 32px;
+  }
 }
 
 .my-skills {
