--- a/sass/sections/_adout-me.scss
+++ b/sass/sections/_adout-me.scss
@@ -1,6 +1,9 @@
 .about-me {
     padding-top: 64px;
     padding-bottom: 64px;
+
+    
+
 }
 
 .about-me__description {
@@ -15,8 +18,15 @@
         line-height: 1.2;
     }
 
-}
+    /* Mobile */
+    @media (max-width: 662px) {
+        // font-weight: 500;
+        width: 322px;
+        font-size: 22px;
+        line-height: 1.2;
+    }
 
+}
 
 
 .about-me__content {
@@ -28,13 +38,10 @@
         flex-shrink: 0;
     }
 
-
-    /* Tablet */
-    @media (max-width: 1243px) {
-        // flex-direction: column;
-        // column-gap: 0;
-        // align-items: center;
-        // row-gap: 64px;
-
-}
+    /* Mobile */
+    @media (max-width: 662px) {
+        flex-direction: column;
+        align-items: center;
+        row-gap: 32px;
+    }
 }
