--- a/sass/blocks/_card-skills.scss
+++ b/sass/blocks/_card-skills.scss
@@ -10,6 +10,17 @@
     row-gap: 16px;
     border-radius: 10px;
 
+    /* Mobile */
+    @media (max-width: 662px) {
+        flex-direction: row;
+        padding-top: 14px;
+        padding-bottom: 14px;
+        padding-left: 32px;
+        padding-right: 12px;
+        min-width: 285px;
+        column-gap: 20px;
+    }
+
     .skill-img{
         transition: fill 0.5s;
     }
@@ -52,14 +63,25 @@
             box-shadow: 0px 0px 4px 1px #F25234,inset 0px 0px 4px 1px #F25234;
         }
         }
-    }
 
-.card-skill__holder-img {
-    width: 128px;
-    // height: 126px;
+    }
+    
+    .card-skill__holder-img {
+        width: 128px;
+        // height: 126px;
+        /* Mobile */
+        @media (max-width: 662px) {
+            height: 32px;
+            width: 32px;
+            flex-shrink: 0;
+        }
+
+
 
     svg{
         margin: 0 auto;
+
     }
+
 }
 
