--- a/sass/blocks/_social-list.scss
+++ b/sass/blocks/_social-list.scss
@@ -4,10 +4,34 @@
     column-gap: 48px;
     flex-wrap: wrap;
     row-gap: 25px;
+    
+    /* Mobile */
+    @media (max-width: 662px) {
+        flex-direction: column;
+        align-items: center;
+        
+    }
 }
 .social-list__item {
     &:nth-child(3){
         min-width: 204px;
+    }
+
+    /* Mobile */
+    @media (max-width: 662px) {
+        min-width: 204px;
+        &:first-child{
+            order: 1;
+        }
+        &:nth-child(3){
+            order: 2;
+        }
+        &:nth-child(2){
+            order: 3;
+        }
+        &:last-child{
+            order: 4;
+        }
     }
 }
 .social-link{
