--- a/css/main.css
+++ b/css/main.css
@@ -656,6 +656,7 @@ select:-webkit-autofill:focus {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  z-index: 2;
 }
 
 .burger-line {
@@ -665,7 +666,7 @@ select:-webkit-autofill:focus {
   background-color: #f0e3ca;
 }
 
-.mobile-menu {
+.mobile-header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -675,16 +676,49 @@ select:-webkit-autofill:focus {
   /* Mobile */
 }
 @media (max-width: 662px) {
-  .mobile-menu {
+  .mobile-header {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
 }
 
+.mobile-menu {
+  background-color: rgba(3, 121, 255, 0.701);
+  position: fixed;
+  top: -100%;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  -webkit-transition: top 0.5s;
+  transition: top 0.5s;
+}
+.mobile-menu.active {
+  top: 0;
+}
+
+.mobile-menu__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  text-align: center;
+}
+
 .header {
   padding-top: 21px;
   padding-bottom: 21px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+}
+.header .wrapper-logo {
+  z-index: 2;
 }
 @media (max-width: 1423px) {
   .header {
