--- a/sass/blocks/_burger.scss
+++ b/sass/blocks/_burger.scss
@@ -4,11 +4,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    z-index: 2;
 }
 .burger-line {
     display: inline-block;
     width: 100%;
     height: 4px;
     background-color: $colorText;
-
 }
