--- a/sass/blocks/_mobile-menu.scss
+++ b/sass/blocks/_mobile-menu.scss
@@ -1,12 +1,55 @@
-.mobile-menu{
-    justify-content: space-between;
-    padding-left: 15px;
-    padding-right: 15px;
-    display: none;
-
-    /* Mobile */
-    @media (max-width: 662px) {
-        display: flex;
-    }
-    }
+.mobile-menu {
+    background-color: rgba(3, 121, 255, 0.701);
+    position: fixed;
+    top: -100%;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    backdrop-filter: blur(5px);
+    transition: top 0.5s;
     
+    &.active{
+        top: 0;
+
+    }
+}
+.mobile-menu__list {
+    position: absolute; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
