--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "./blocks/links";
 @import "./blocks/social-list";
 @import "./blocks/burger";
+@import "./blocks/mobile-header";
 @import "./blocks/mobile-menu";
 
 // sections
