--- a/css/main.css
+++ b/css/main.css
@@ -658,12 +658,27 @@ select:-webkit-autofill:focus {
           justify-content: space-between;
   z-index: 2;
 }
+.burger.active .burger-line:first-child {
+  -webkit-transform: rotate(45deg) translate(0, 15px);
+          transform: rotate(45deg) translate(0, 15px);
+}
+.burger.active .burger-line:nth-child(2) {
+  opacity: 0;
+}
+.burger.active .burger-line:last-child {
+  -webkit-transform: rotate(-45deg) translate(0, -14px);
+          transform: rotate(-45deg) translate(0, -14px);
+}
 
 .burger-line {
   display: inline-block;
   width: 100%;
   height: 4px;
   background-color: #f0e3ca;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
 }
 
 .mobile-header {
