--- a/sass/blocks/_burger.scss
+++ b/sass/blocks/_burger.scss
@@ -5,10 +5,23 @@
     flex-direction: column;
     justify-content: space-between;
     z-index: 2;
+
+    &.active{
+        .burger-line:first-child{
+            transform: rotate(45deg) translate(0, 15px);
+        }
+        .burger-line:nth-child(2){
+            opacity: 0;
+        }
+        .burger-line:last-child{
+            transform: rotate(-45deg) translate(0, -14px);
+    }
+    }
 }
 .burger-line {
     display: inline-block;
     width: 100%;
     height: 4px;
     background-color: $colorText;
+    transition: transform 0.5s;
 }
