--- a/css/main.css
+++ b/css/main.css
@@ -398,6 +398,23 @@ select:-webkit-autofill:focus {
 
 .card-skill {
   width: 200px;
+  height: 300px;
+  position: relative;
+  /* Mobile */
+}
+.card-skill__front, .card-skill__back {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  position: absolute;
+  -webkit-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s;
+  transition: transform 1s;
+  transition: transform 1s, -webkit-transform 1s;
+}
+.card-skill__front {
   background-color: #21201D;
   border-radius: 10px;
   padding-top: 60px;
@@ -414,7 +431,35 @@ select:-webkit-autofill:focus {
           align-items: center;
   row-gap: 16px;
   border-radius: 10px;
-  /* Mobile */
+  -webkit-transform: perspective(600px) rotateY(0deg);
+          transform: perspective(600px) rotateY(0deg);
+}
+.card-skill__back {
+  background-color: #2255b3;
+  -webkit-transform: perspective(600px) rotateY(180deg);
+          transform: perspective(600px) rotateY(180deg);
+}
+.card-skill.active {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) rotateY(0deg);
+          transform: translate(-50%, -50%) rotateY(0deg);
+  min-width: 500px;
+  min-height: 400px;
+  z-index: 3;
+}
+.card-skill.active__front {
+  -webkit-transform: perspective(600px) rotateY(-180deg);
+          transform: perspective(600px) rotateY(-180deg);
+  -webkit-backface-visibility: visible;
+          backface-visibility: visible;
+}
+.card-skill.active__back {
+  -webkit-transform: perspective(600px) rotateY(0deg);
+          transform: perspective(600px) rotateY(0deg);
+  -webkit-backface-visibility: visible;
+          backface-visibility: visible;
 }
 @media (max-width: 662px) {
   .card-skill {
