--- a/sass/blocks/_card-skills.scss
+++ b/sass/blocks/_card-skills.scss
@@ -1,15 +1,53 @@
 .card-skill{
-    width: 200px; 
-    background-color: $colorCard;
-    border-radius: 10px;
-    padding-top: 60px;
-    padding-bottom: 54px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 16px;
-    border-radius: 10px;
+    width: 200px;
+    height: 300px;
+    position: relative;
 
+    &__front,
+    &__back{
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        backface-visibility: hidden;
+        position: absolute;
+        transition: transform 1s;
+    }
+    &__front{
+        background-color: $colorCard;
+        border-radius: 10px;
+        padding-top: 60px;
+        padding-bottom: 54px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 16px;
+        border-radius: 10px;
+        transform: perspective(600px) rotateY(0deg);
+    }
+    &__back{
+        background-color: rgb(34, 85, 179);
+        transform: perspective(600px) rotateY(180deg);
+    }
+
+
+    &.active{
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%) rotateY(0deg);
+        min-width: 500px;
+        min-height: 400px;
+        z-index: 3;
+
+        &__front{
+            transform: perspective(600px) rotateY(-180deg);
+            backface-visibility: visible;
+        }
+        &__back{
+            transform: perspective(600px) rotateY(0deg);
+            backface-visibility: visible;
+        }
+    }
     /* Mobile */
     @media (max-width: 662px) {
         flex-direction: row;
