--- a/css/main.css
+++ b/css/main.css
@@ -776,6 +776,9 @@ select:-webkit-autofill:focus {
   left: 0;
   width: 100%;
   z-index: 2;
+  background-color: rgba(255, 255, 255, 0);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
 }
 .header .wrapper-logo {
   z-index: 2;
