--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -6,6 +6,8 @@
     left: 0;
     width: 100%;
     z-index: 2;
+    background-color: rgba(255, 255, 255, 0);
+    backdrop-filter: blur(5px);
     
     .wrapper-logo{
         z-index: 2;
