--- a/sass/blocks/_card-skills.scss
+++ b/sass/blocks/_card-skills.scss
@@ -2,9 +2,10 @@
     width: 200px;
     height: 300px;
     position: relative;
+    transition: all 0.5s ease;
 
-    &__front,
-    &__back{
+    .card-skill__front,
+    .card-skill__back{
         width: 100%;
         height: 100%;
         overflow: hidden;
@@ -12,7 +13,7 @@
         position: absolute;
         transition: transform 1s;
     }
-    &__front{
+    .card-skill__front{
         background-color: $colorCard;
         border-radius: 10px;
         padding-top: 60px;
@@ -24,30 +25,12 @@
         border-radius: 10px;
         transform: perspective(600px) rotateY(0deg);
     }
-    &__back{
+    .card-skill__back{
         background-color: rgb(34, 85, 179);
         transform: perspective(600px) rotateY(180deg);
+        position: absolute;
     }
 
-
-    &.active{
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%) rotateY(0deg);
-        min-width: 500px;
-        min-height: 400px;
-        z-index: 3;
-
-        &__front{
-            transform: perspective(600px) rotateY(-180deg);
-            backface-visibility: visible;
-        }
-        &__back{
-            transform: perspective(600px) rotateY(0deg);
-            backface-visibility: visible;
-        }
-    }
     /* Mobile */
     @media (max-width: 662px) {
         flex-direction: row;
@@ -62,7 +45,6 @@
     .skill-img{
         transition: fill 0.5s;
     }
-
 
     &:hover{
         .skill-img--html{
@@ -106,7 +88,6 @@
     
     .card-skill__holder-img {
         width: 128px;
-        // height: 126px;
         /* Mobile */
         @media (max-width: 662px) {
             height: 32px;
@@ -122,4 +103,28 @@
     }
 
 }
+
+.card-skill.active{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) rotateY(0deg) !important;
+    min-width: 500px;
+    min-height: 400px;
+    z-index: 3;
+
+    .card-skill__front{
+        transform: perspective(600px) rotateY(-180deg);
+        
+    }
+    .card-skill__back{
+        transform: perspective(600px) rotateY(0deg);
+        
+    }
+}
+
+
+
+
+
 
