--- a/css/main.css
+++ b/css/main.css
@@ -438,10 +438,13 @@ select:-webkit-autofill:focus {
           transform: perspective(600px) rotateY(0deg);
 }
 .card-skill .card-skill__back {
-  background-color: #2255b3;
+  background-color: rgba(34, 85, 179, 0.8);
   -webkit-transform: perspective(600px) rotateY(180deg);
           transform: perspective(600px) rotateY(180deg);
   position: absolute;
+  border-radius: 25px;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
 }
 @media (max-width: 662px) {
   .card-skill {
@@ -536,6 +539,12 @@ select:-webkit-autofill:focus {
 .card-skill.active .card-skill__back {
   -webkit-transform: perspective(600px) rotateY(0deg);
           transform: perspective(600px) rotateY(0deg);
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 .card-works {
