--- a/sass/blocks/_card-skills.scss
+++ b/sass/blocks/_card-skills.scss
@@ -26,9 +26,11 @@
         transform: perspective(600px) rotateY(0deg);
     }
     .card-skill__back{
-        background-color: rgb(34, 85, 179);
+        background-color: rgba(34, 85, 179, 0.8);
         transform: perspective(600px) rotateY(180deg);
         position: absolute;
+        border-radius: 25px;
+        backdrop-filter: blur(5px);
     }
 
     /* Mobile */
@@ -119,10 +121,13 @@
     }
     .card-skill__back{
         transform: perspective(600px) rotateY(0deg);
-        
     }
 }
-
+.close{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
 
 
 
