--- a/css/main.css
+++ b/css/main.css
@@ -445,6 +445,15 @@ select:-webkit-autofill:focus {
   border-radius: 25px;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 @media (max-width: 662px) {
   .card-skill {
@@ -545,6 +554,12 @@ select:-webkit-autofill:focus {
   position: absolute;
   top: 10px;
   right: 10px;
+  -webkit-transition: 0.5s ease-in;
+  transition: 0.5s ease-in;
+}
+.close:hover {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 .fade-block {
@@ -560,6 +575,11 @@ select:-webkit-autofill:focus {
 }
 .fade-block.open {
   top: 0;
+}
+
+.card-skill__description {
+  width: 80%;
+  text-align: center;
 }
 
 .card-works {
