--- a/css/main.css
+++ b/css/main.css
@@ -1123,4 +1123,52 @@ select:-webkit-autofill:focus {
   margin-bottom: 16px;
 }
 
+.slider-review {
+  width: 80%;
+  margin: 0 auto;
+  position: relative;
+}
+
+.slick-list {
+  overflow: hidden;
+}
+
+.slick-track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.slider-review__slide {
+  width: 400px;
+  height: 300px;
+  background-color: aqua;
+  margin: 0 10px;
+}
+
+.slick-dots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 20px;
+          column-gap: 20px;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.slick-dots button {
+  font-size: 0;
+  line-height: 0;
+  height: 10px;
+  width: 10px;
+  border-radius: 45%;
+  background-color: #f0e3ca;
+}
+
+.slick-active button {
+  background-color: #0377FF;
+}
+
 /*# sourceMappingURL=main.css.map */
