--- a/sass/sections/_review.scss
+++ b/sass/sections/_review.scss
@@ -1,6 +1,43 @@
 .slider-review {
-    
+    width: 80%;
+    margin: 0 auto;
+    position: relative;
 }
-.slider-review__slide {
+.slick-list{
+    overflow: hidden;
+}
+.slick-track{
+    display: flex;
 
 }
+.slider-review__slide {
+    width: 400px;
+    height: 300px;
+    background-color: aqua;
+    margin: 0 10px;
+}
+.slick-dots{
+    display: flex;
+    column-gap: 20px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.slick-dots button{
+    font-size: 0;
+    line-height: 0;
+    height: 10px;
+    width: 10px;
+    border-radius: 45%;
+    background-color: $colorText;
+}
+.slick-active button{
+    background-color: $colorTitle;
+}
+
+
+
+
+
+
+
