--- a/css/main.css
+++ b/css/main.css
@@ -1171,4 +1171,24 @@ select:-webkit-autofill:focus {
   background-color: #0377FF;
 }
 
+.slider__arrow {
+  position: absolute;
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 2;
+}
+
+.slider__arrow--left {
+  left: -60px;
+  -webkit-transform: translateY(-50%) rotate(180deg);
+          transform: translateY(-50%) rotate(180deg);
+}
+
+.slider__arrow--right {
+  right: -60px;
+}
+
 /*# sourceMappingURL=main.css.map */
