--- a/sass/sections/_review.scss
+++ b/sass/sections/_review.scss
@@ -34,7 +34,21 @@
 .slick-active button{
     background-color: $colorTitle;
 }
-
+.slider__arrow {
+    position: absolute;
+    top: 50%;
+    width: 50px;
+    height: 50px;
+    transform: translateY(-50%);
+    z-index: 2;
+}   
+.slider__arrow--left {
+    left: -60px;
+    transform: translateY(-50%) rotate(180deg) ;
+}
+.slider__arrow--right {
+    right: -60px;
+}
 
 
 
