--- a/css/main.css
+++ b/css/main.css
@@ -791,9 +791,9 @@ select:-webkit-autofill:focus {
 .mobile-menu {
   background-color: rgba(3, 121, 255, 0.701);
   position: fixed;
-  top: -100%;
+  top: -100vh;
   left: 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
