--- a/sass/blocks/_mobile-menu.scss
+++ b/sass/blocks/_mobile-menu.scss
@@ -1,9 +1,9 @@
 .mobile-menu {
     background-color: rgba(3, 121, 255, 0.701);
     position: fixed;
-    top: -100%;
+    top: -100vh;
     left: 0;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     backdrop-filter: blur(5px);
     transition: top 0.5s;
