--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -51,8 +51,8 @@
     
     img, svg {
     display: block;
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 100%;
     }
     
     /* Form */
