--- a/sass/sections/_review.scss
+++ b/sass/sections/_review.scss
@@ -13,8 +13,9 @@
 .slider-review__slide {
     width: 400px;
     height: 300px;
-    background-color: aqua;
+    background-color: $colorButton;
     margin: 0 10px;
+    padding: 10px;
 }
 
 .slick-dots{
@@ -67,8 +68,32 @@
     right: -60px;
 }
 
+.slider-review__avatar{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    overflow: hidden;
+    // margin: 0 auto 20px;
+}
 
+.slider-review__text{
+    font-size: 20px;
 
+}
+.slider-review__top {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 10px;
+}
+.slider-review__nickname {
+    
+}
+.slider-review__name {
+    font-size: 20px;
+    font-weight: 600;
+    color: $colorTitle;
+}
+.slider-review__job {
 
-
-
+}
