--- a/sass/sections/_review.scss
+++ b/sass/sections/_review.scss
@@ -55,9 +55,10 @@
         }
     }
 
-    // Mobile
-    @media (max-width: 662px){
-        display: none;
+
+    // Mobile and tablet
+    @media (max-width: 1024px){
+        display: none !important;
     }
 }   
 .slider__arrow--left {
@@ -74,17 +75,29 @@
     border-radius: 50%;
     overflow: hidden;
     // margin: 0 auto 20px;
+
+    // Tablet and mobile
+    @media(max-width: 1024px) {
+        height: 40px;
+        width: 40px;
+    }
 }
 
 .slider-review__text{
     font-size: 20px;
-
+    
+    @media(max-width: 1024px){
+        line-height: 1.2;
+        font-size: 18px;
+    }
+    
 }
 .slider-review__top {
     display: flex;
     align-items: center;
     justify-content: center;
     column-gap: 10px;
+    margin-bottom: 10px;
 }
 .slider-review__nickname {
     
