feat: button send

--- a/sass/blocks/_context-button.scss
+++ b/sass/blocks/_context-button.scss
@@ -9,6 +9,7 @@
     border-radius: 5px;
     min-width: 153px;
     transition: border-color 0.5s;
+    background-color: transparent;
 
     /* Mobile */
     @media (max-width: 662px) {
