--- a/css/main.css
+++ b/css/main.css
@@ -65,8 +65,6 @@ button, input[type="submit"] {
   display: inline-block;
   -webkit-box-shadow: none;
           box-shadow: none;
-  background-color: transparent;
-  background: none;
   cursor: pointer;
 }
 
@@ -387,6 +385,7 @@ select:-webkit-autofill:focus {
   min-width: 153px;
   -webkit-transition: border-color 0.5s;
   transition: border-color 0.5s;
+  background-color: transparent;
   /* Mobile */
 }
 @media (max-width: 662px) {
@@ -1193,6 +1192,11 @@ select:-webkit-autofill:focus {
   margin-bottom: 16px;
 }
 
+.review {
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+
 .slider-review {
   width: 80%;
   margin: 0 auto;
@@ -1212,7 +1216,7 @@ select:-webkit-autofill:focus {
 .slider-review__slide {
   width: 400px;
   height: 300px;
-  background-color: #32312E;
+  background-color: #21201D;
   margin: 0 10px;
   padding: 10px;
 }
@@ -1250,6 +1254,7 @@ select:-webkit-autofill:focus {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   z-index: 2;
+  background-color: transparent;
 }
 .slider__arrow:hover path {
   fill: #0377FF;
@@ -1315,6 +1320,65 @@ select:-webkit-autofill:focus {
   font-size: 20px;
   font-weight: 600;
   color: #0377FF;
+}
+
+.contact-form {
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+
+.form {
+  background-color: #21201D;
+  width: 40%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  row-gap: 30px;
+  padding-bottom: 30px;
+  padding-top: 30px;
+  border-radius: 20px;
+}
+
+.form__item {
+  width: 90%;
+}
+
+.form__input {
+  background-color: #0377FF;
+  display: block;
+  width: 100%;
+  height: 40px;
+  border-radius: 10px;
+}
+
+.form__input--message {
+  min-height: 250px;
+  resize: none;
+}
+
+.input-submit {
+  background-color: #f0e3ca;
+  padding: 10px 50px;
+  border-radius: 10px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer;
+}
+.input-submit:active {
+  background-color: #0377FF;
+}
+@media (hover: hover) {
+  .input-submit:hover {
+    background-color: hwb(0 100% 0%/0.418);
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
