--- a/sass/sections/_review.scss
+++ b/sass/sections/_review.scss
@@ -1,3 +1,8 @@
+.review{
+    padding-top: 64px;
+    padding-bottom: 64px;
+}
+
 .slider-review {
     width: 80%;
     margin: 0 auto;
@@ -13,7 +18,7 @@
 .slider-review__slide {
     width: 400px;
     height: 300px;
-    background-color: $colorButton;
+    background-color: $colorCard;
     margin: 0 10px;
     padding: 10px;
 }
@@ -43,6 +48,7 @@
     height: 50px;
     transform: translateY(-50%);
     z-index: 2;
+    background-color: transparent;
 
     &:hover{
         path{
