--- a/css/main.css
+++ b/css/main.css
@@ -1349,6 +1349,7 @@ select:-webkit-autofill:focus {
 
 .form__item {
   width: 90%;
+  position: relative;
 }
 
 .form__input {
@@ -1357,6 +1358,17 @@ select:-webkit-autofill:focus {
   width: 100%;
   height: 40px;
   border-radius: 10px;
+}
+
+.form__fake-placeholder {
+  position: absolute;
+  bottom: 50%;
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+  padding-left: 10px;
+}
+.form__fake-placeholder--message {
+  bottom: 93%;
 }
 
 .form__input--message {
