--- a/sass/sections/_contact-form.scss
+++ b/sass/sections/_contact-form.scss
@@ -38,8 +38,11 @@
     transform: translateY(50%);
     padding-left: 10px;
     font-size: 20px;
+    transition: 0.5s;
+    pointer-events: none;
     &.active {
         bottom: 105%;
+        
     }
 
     &--message{
