--- a/css/main.css
+++ b/css/main.css
@@ -1358,6 +1358,10 @@ select:-webkit-autofill:focus {
   width: 100%;
   height: 40px;
   border-radius: 10px;
+  font-size: 25px;
+  color: #f0e3ca;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .form__fake-placeholder {
@@ -1384,6 +1388,8 @@ select:-webkit-autofill:focus {
 .form__input--message {
   min-height: 250px;
   resize: none;
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
 
 .input-submit {
