--- a/sass/sections/_contact-form.scss
+++ b/sass/sections/_contact-form.scss
@@ -31,6 +31,12 @@
     width: 100%;
     height: 40px;
     border-radius: 10px;
+    font-size: 25px;
+    color: $colorText;
+    padding-left: 5px;
+    padding-right: 5px;
+    
+    
 }
 .form__fake-placeholder {
     position: absolute;
@@ -47,6 +53,7 @@
 
     &--message{
         bottom: 93%;
+        
 
         &.active{
             bottom: 100%;
@@ -57,6 +64,8 @@
 .form__input--message {
     min-height: 250px;
     resize: none;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 .wrapper-btn {
 
