--- a/sass/base/_vars.scss
+++ b/sass/base/_vars.scss
@@ -3,5 +3,5 @@ $colorTitle: #0377FF;
 $colorCard: #21201D;
 $colorButton: #32312E;
 $colorBackside: rgba(33, 32, 29, 0.8);
-
+$colorScroll: rgb(22, 28, 54);
 
